--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+    <link href="./src/fonts/stylesheet.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
