--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/public/app.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
